--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <div class="card card-1"></div>
     <div class="card card-1"></div>
     <div class="card card-1"></div>
+    <div class="card card-1"></div>
+    <div class="card card-1"></div>
+    <div class="card card-1"></div>
+    <div class="card card-1"></div>
     </div>
   </main>
   <footer>
